postcss/testData/inspections/customSelectors/emptyCustomSelector.pcss
@custom-selector <error descr="valid token expected">@</error>:--button h1;